// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TVL slice tests should fully recompute total TVL when getting new chain data 1`] = `"817.047632700577131"`;

exports[`TVL slice tests should fully recompute total TVL when getting new chain data 2`] = `"940.047632700577131"`;

exports[`TVL slice tests should fully recompute total TVL when getting new chain data 3`] = `"23080.045679782069632"`;

exports[`TVL slice tests should update state on fulfilled boost contract data 1`] = `
Object {
  "byBoostId": Object {
    "moo_banana-banana-busd-bitcrush": Object {
      "staked": "148140",
      "tvl": "310127.810437199460438",
    },
  },
  "byVaultId": Object {
    "banana-banana-busd": Object {
      "tvl": "257.4977769932194791",
    },
  },
  "exclusions": Object {},
  "totalTvl": "257.4977769932194791",
}
`;

exports[`TVL slice tests should update state on fulfilled gov vault contract data 1`] = `
Object {
  "byBoostId": Object {},
  "byVaultId": Object {
    "bifi-gov": Object {
      "tvl": "3839731.6410978912054",
    },
  },
  "exclusions": Object {},
  "totalTvl": "3839731.6410978912054",
}
`;

exports[`TVL slice tests should update state on fulfilled standard vault contract data 1`] = `
Object {
  "byBoostId": Object {},
  "byVaultId": Object {
    "banana-cyt-bnb": Object {
      "tvl": "817.047632700577131",
    },
  },
  "exclusions": Object {},
  "totalTvl": "817.047632700577131",
}
`;
